# nuto_applications

./: CMakeLists.txt  Coupled2DDamageTransient.cpp  Coupled2DMeso.py  Coupled2DMesoTransient.cpp  DamageShell.cpp  DamageShell.py  DamageShellMeso.cpp  DamageShellNonlinear.cpp  OneStone.geo  OneStone.msh  SlabTransient.cpp  Temp2DMesoTransient.py  TempCos1D.py  Temperature2DHomogeneous.geo  Temperature2DHomogeneous.msh  Temperature2DMeso.msh  TemperatureXdTransient.cpp  ThermoDamage.cpp  TrussHeatCoupled.cpp  TrussHeatCoupledRestrained.cpp  cylinder.geo  cylinder.msh  damage_bar.cpp  hancock1.cpp  khoury_cooling.cpp  khoury_damage.cpp
damage/: CMakeLists.txt  CylinderCompression.cpp
heatconduction/: CMakeLists.txt  DynamicXd.cpp  Isolatedcylinder.py  MesoShell.py  PlateCooling.cpp  Temp2DMesoTransient.py  TemperatureXdTransient.cpp
meshCreation/: CMakeLists.txt  CylinderMeso.cpp
meshes/2D/: ShellCoarse.msh  ShellFine.geo  ShellFine.msh  ShellMeso.geo  ShellMeso.msh
meshes/3D/: CylinderCoarse.geo  CylinderCoarse.msh  CylinderFine.geo  CylinderFine.msh  CylinderHalf.geo  CylinderHalfCoarse.geo  CylinderHalfCoarse.msh  CylinderMeso.geo  CylinderMeso.msh  CylinderSemiRegular.geo  CylinderSemiRegular.msh  Daemmwolle.geo  Daemmwolle.msh
thermoelastic/: CMakeLists.txt  TrussHeatCoupledRestrained.cpp
thermoplastic/: CMakeLists.txt  DamageShell.cpp  DamageShellMeso.cpp  DamageShellNonlinear.cpp  DamageTruss.cpp  HTL.cpp  HTLExperimentSuite.py  HTLVariableSize.cpp  HTLWithPrism.cpp  MaterialData.json  khoury_cooling.cpp  khoury_loads.py  variable_size_cylinders.py
